[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/flying_enemy/tile380.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/flying_enemy/tile382.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/flying_enemy/tile381.png" type="Texture" id=3]
[ext_resource path="res://scripts/flying_enemy.gd" type="Script" id=4]
[ext_resource path="res://assets/Sound Effects/splat2ogg-14668.mp3" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Death",
"speed": 4.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 1.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 4.5 )

[node name="Flying Enemy" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, 0 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Roof_Checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -11 )

[node name="Floor_Checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 13 )

[node name="Top_Checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Checker"]
position = Vector2( 0, -2.5 )
shape = SubResource( 3 )

[node name="Side_Checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side_Checker"]
position = Vector2( 0, 3.5 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Death_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Top_Checker" to="." method="_on_Top_Checker_body_entered"]
[connection signal="body_entered" from="Side_Checker" to="." method="_on_Side_Checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
